force-app/main/default/objects/Event_Registration__c/Event_Registration__c.object-meta.xml
<CustomObject>
    <label>Event Registration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Registration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>