force-app/main/default/objects/Event_Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Select Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Registration</relationshipLabel>
    <relationshipName>Event_Registration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>