force-app/main/default/objects/Event_Registration__c/fields/Registered_On__c.field-meta.xml
<CustomField>
    <fullName>Registered_On__c</fullName>
    <label>Registered On</label>
    <type>DateTime</type>
</CustomField>